--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ I provide web development services, creating fast, responsive, and SEO-friendly 
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="image/work3.jpg" alt="">
+                    <img src="image/work.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
@@ -193,12 +193,12 @@ I provide web development services, creating fast, responsive, and SEO-friendly 
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work5.jpg" alt="">
+                    <img src="image/work5.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work6.jpg" alt="">
+                    <img src="image/work6.jpg" alt="">
                 </div>
             </div>
         </div>
